Add support for Array and ExprValue Parsing With Inner Hits
Signed-off-by: forestmvey <forestv@bitquilltech.com>